manifests/backend/overlays/staging/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "backend-gateway.default.svc.cluster.local"
    - "backend-gateway.default"
    - "backend-gateway"
  rules:
    - backendRefs:
        - name: backend
          port: 80
