manifests/backend/overlays/staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mesh
spec:
  parentRefs:
    - kind: Mesh
      name: istio
  hostnames: ["backend.default.svc.cluster.local"]
  rules:
  - backendRefs:
      - name: backend
        port: 80
